@@ -8,7 +8,7 @@ Imports::
     >>> from dateutil.relativedelta import relativedelta
     >>> from decimal import Decimal
     >>> from proteus import Model, Wizard
-    >>> from trytond.tests.tools import activate_modules
+    >>> from trytond.tests.tools import activate_modules, set_user
     >>> from trytond.modules.company.tests.tools import create_company, \
     ...     get_company
     >>> from trytond.modules.account.tests.tools import create_fiscalyear, \
@@ -30,11 +30,23 @@ Create chart of accounts::
     >>> _ = create_chart(company)
     >>> accounts = get_accounts(company)
 
-Create customer::
+Create employee::
 
     >>> Party = Model.get('party.party')
+    >>> Employee = Model.get('company.employee')
+    >>> employee = Employee()
+    >>> party = Party(name='Employee')
+    >>> party.save()
+    >>> employee.party = party
+    >>> employee.company = company
+    >>> employee.save()
+
+Create customers::
+
     >>> customer = Party(name='Customer')
     >>> customer.save()
+    >>> other_customer = Party(name='Other Customer')
+    >>> other_customer.save()
 
 Create agent::
 
@@ -47,6 +59,8 @@ Create agent::
     >>> selection = agent.selections.new()
     >>> selection.start_date = today
     >>> selection.party = customer
+    >>> selection = agent.selections.new()
+    >>> selection.employee = employee
     >>> agent.save()
 
 Create sale::
@@ -75,3 +89,25 @@ Agent is not set for yesterday sales::
     >>> sale.state
     'quotation'
     >>> sale.agent
+
+Link user to employee::
+
+    >>> User = Model.get('res.user')
+    >>> user = User(config.user)
+    >>> user.employees.append(employee)
+    >>> user.employee = employee
+    >>> user.save()
+    >>> set_user(user.id)
+
+Creating a sale and test agent is assigned::
+
+    >>> sale = Sale()
+    >>> sale.party = other_customer
+    >>> sale.agent
+    >>> sale.click('quote')
+    >>> sale.state
+    'quotation'
+    >>> sale.quoted_by == employee
+    True
+    >>> sale.agent == agent
+    True
