@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree sequence="sequence">
     <field name="party"/>
+    <field name="employee"/>
     <field name="agent"/>
     <field name="start_date"/>
     <field name="end_date"/>
